--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="ri-menu-3-line"></i>
             </div>
             <div id="nav-part2">
-                <h1>Denvertech</h1>
+                <h1>DenverTech</h1>
             </div>
             <div id="nav-part3">
                 <button>Login</button>
